--- a/FOE_CourseRegistrationSystem/wwwroot/css/AdminRegistrationDetails_style.css
+++ b/FOE_CourseRegistrationSystem/wwwroot/css/AdminRegistrationDetails_style.css
@@ -155,10 +155,14 @@ body {
 .dashboard-content {
     background-color:white;
     padding: 20px;
-    max-width: 50%;
+    max-width: 48%;
     height: auto;
-    border-radius:7px;
+    border-radius:9px;
 }
+
+    .dashboard-content h2 {
+        color: var(--primary-color);
+    }
 
 .button-container {
     display: flex;
