Updated Advisor and Coordinator Dashboard

--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/AdminDashboard.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/AdminDashboard.cshtml
@@ -36,12 +36,7 @@
                 </li>
         </div>
         <div class="bottom-links">
-            <li class="bottom-items">
-                <a href="#"><i class="fas fa-cog"></i><span>Settings</span></a>
-            </li>
-            <li class="bottom-items">
-                <a href="#"><i class="fas fa-question-circle"></i><span>Help</span></a>
-            </li>
+            
             <li class="bottom-items">
                 <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
             </li>
@@ -65,6 +60,16 @@
 
         <!-- Dashboard Content -->
         <div class="dashboard-content">
+
+            <div class="card personal-details">
+                <h2>Personal details</h2>
+                <div class="details-content">
+                    <p><span>Name :</span> - <span>KANISTAN K.</span></p>
+                    <p><span>Phone :</span> - <span>0772664192</span></p>
+                    <p><span>Email :</span> - <span>2021e064@eng.jfn.ac.lk</span></p>
+                    <p><span>Address :</span> - <span>KEVIL MULLIYAN</span></p>
+                </div>
+            </div>
             <!-- Total Users Card -->
             <div class="card total-users-card">
                 <h2>Lecturers: 30</h2>
