--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/RegistrationSession.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/RegistrationSession.cshtml
@@ -40,12 +40,6 @@
         </div>
         <div class="bottom-links">
             <li class="bottom-items">
-                <a href="#"><i class="fas fa-cog"></i><span>Settings</span></a>
-            </li>
-            <li class="bottom-items">
-                <a href="#"><i class="fas fa-question-circle"></i><span>Help</span></a>
-            </li>
-            <li class="bottom-items">
                 <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
             </li>
         </div>
@@ -56,7 +50,7 @@
     <div class="main-content">
         <!-- Header -->
         <div class="header">
-            <h1>Admin Dashboard</h1>
+            <h1>Registration Sessions</h1>
             <div class="user-info">
                 <div class="profile-pic">
                     <img id="admin-profile" src="~/images/profile.png" alt="Admin Profile">
