--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Student/CourseRegistration.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Student/CourseRegistration.cshtml
@@ -30,15 +30,11 @@
                 <li>
                     <a href="@Url.Action("ResultPage", "Student")"><i class="fas fa-chart-bar"></i><span>Results</span></a>
                 </li>
-               
+
         </div>
         <div class="bottom-links">
             <li class="bottom-items">
-                <a href="#"><i class="fas fa-cog"></i><span>Settings</span></a>
-            </li>
-            <li class="bottom-items">
-                <a href="#"><i class="fas fa-question-circle"></i><span>Help</span></a>
-            </li>
+                <a href="@Url.Action("FAQs", "Student")"><i class="fas fa-question-circle"></i><span>FAQs</span></a>
             <li class="bottom-items">
                 <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
             </li>
@@ -50,7 +46,7 @@
     <div class="main-content">
         <!-- Header -->
         <div class="header">
-            <h1>Student - Dashboard</h1>
+            <h1>Student - Courses</h1>
             <div class="user-info">
                 <div class="profile-pic">
                     <img id="student-profile" src="~/images/student1.png" alt="Student Profile">
