--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Student/RegisteredCourse.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Student/RegisteredCourse.cshtml
@@ -40,11 +40,7 @@
 
                 <div class="bottom-links">
                     <li class="bottom-items">
-                        <a href="#"><i class="fas fa-cog"></i><span>Settings</span></a>
-                    </li>
-                    <li class="bottom-items">
-                        <a href="#"><i class="fas fa-question-circle"></i><span>Help</span></a>
-                    </li>
+                        <a href="@Url.Action("FAQs", "Student")"><i class="fas fa-question-circle"></i><span>FAQs</span></a>
                     <li class="bottom-items">
                         <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
                     </li>
